--- a/app/views/birds/_form.html.erb
+++ b/app/views/birds/_form.html.erb
@@ -15,7 +15,7 @@
       <%= form.label :content %>
       <%= form.text_field :content %>
     </div>
-    <%= form.submit %>
+    <%= form.submit "つぶやく" %>
   <% end %>
   
   <%= link_to "一覧画面にもどる", birds_path %>
