--- a/app/assets/stylesheets/birds.scss
+++ b/app/assets/stylesheets/birds.scss
@@ -1,3 +1,85 @@
-// Place all the styles related to the birds controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+html {
+    position: relative;
+    min-height: 100%;
+}
+header {
+    width: 100%;
+    background-color: #2c3e50;
+    height: 54px;
+}
+  
+header ul {
+    margin: 0 auto;
+    list-style: none;
+}
+  
+header ul a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: white;
+}
+  
+header li {
+    float: left;
+    width: auto;
+}
+  
+header ul:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+  
+.btn {
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    margin-top:20px;
+    padding-bottom: 100px;
+}
+.btn :active {
+    -ms-transform: translateY(4px);
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);/*下に動く*/
+    border-bottom: none;
+}
+
+.tbl {
+    width: 80%;
+    margin-left: 20px;
+}
+
+.tbl th{
+    margin-left: 20px;
+    text-align: center;
+}
+
+td.edit_link{
+    display: inline-block;
+    margin-left: 500px   ;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    color: #67c5ff;
+    border: double 4px midnightblue;
+    border-radius: 3px;
+    transition: .4s;
+
+}
+footer {
+    width: 100%;
+    background-color:#2c3e50;
+    padding: 20px 0 10px 0;
+    color: white;
+    margin: auto;
+    padding-bottom: 10px;
+    font-size: 12px;
+    position: absolute;
+    bottom: 0;
+}
+  
+  
+body {
+    text-align: center;
+}
+  
