--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,25 @@
   <head>
     <title>Bird</title>
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header>
+      <ul>
+        <li><a href="/birds">つぶやき一覧</a></li>
+        <li><a href="birds/new">新規投稿</a></li>
+      </ul>
+  </header>
+
     <%= yield %>
   </body>
+
+  <footer>
+  <p>DIVE INTO CODE 201808</p>
+  <p>satomi kawasaki</p>
+  </footer>
 </html>
